--- a/game/TemplateData/style.css
+++ b/game/TemplateData/style.css
@@ -18,7 +18,7 @@ body {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh; /* dynamic viewport height for Android */
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -31,23 +31,26 @@ body {
   background: #231F20;
 }
 
+/* Base mobile canvas */
 .unity-mobile #unity-canvas {
   width: 100vw;
-  height: calc(100vh - 90px);
-  max-height: calc(100vh - 90px);
+  height: calc(100dvh - 90px);      /* leave room for banner */
+  max-height: calc(100dvh - 90px);
   object-fit: contain;
   display: block;
   margin: 0 auto;
   position: relative;
-  z-index: 1;
+  z-index: 1; /* canvas stays behind loading bar + banner */
 }
 
+/* Loading bar MUST be above everything */
 #unity-loading-bar {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   display: none;
+  z-index: 99999; /* highest priority */
 }
 
 #unity-logo {
@@ -120,32 +123,34 @@ body {
 .unity-mobile #bottom-banner {
   display: block;
   height: 90px;
+
+  /* spacing */
   width: calc(100% - 40px);
   margin: 10px auto;
   box-sizing: border-box;
+
+  /* clean card look */
+  background: none;
+  border: none;
+
+  /* layout */
   position: relative;
-  z-index: 9999;
+  z-index: 9999; /* below loading bar, above canvas */
   pointer-events: auto;
   border-radius: 10px;
-
-  /* Restore banner visuals */
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: #111;
 }
 
 /* ANDROID OVERRIDES */
 .is-android #unity-container.unity-mobile #unity-canvas {
-  height: calc(100vh - 110px);
-  max-height: calc(100vh - 110px);
+  height: calc(100dvh - 110px);
+  max-height: calc(100dvh - 110px);
 }
 
 /* ANDROID TALL-SCREEN OVERRIDES */
 @media screen and (min-aspect-ratio: 10/19) {
   .is-android #unity-container.unity-mobile #unity-canvas {
-    height: calc(100vh - 130px);
-    max-height: calc(100vh - 130px);
+    height: calc(100dvh - 130px);
+    max-height: calc(100dvh - 130px);
   }
 
   .is-android #unity-container.unity-mobile #bottom-banner {
