--- a/game/TemplateData/style.css
+++ b/game/TemplateData/style.css
@@ -237,3 +237,9 @@ body {
   margin: 0;
   padding: 0 10px;
 }
+
+@supports (-webkit-touch-callout: none) {
+  #bottom-banner {
+    display: none !important;
+  }
+}
